Implement getInstances (v2)
