# plugins/orchestrator-common/api/openapi.yaml
@@ -113,6 +113,28 @@ paths:
                   message:
                     type: string
                     description: Error message
+  /v2/workflows/instances:
+    get:
+      operationId: getInstances
+      summary: Get instances
+      description: Retrieve an array of instances
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProcessIntancesDTO'
+        500:
+          description: Error fetching instances
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
 components:
   schemas:
     WorkflowOverviewListResultDTO:
@@ -214,3 +236,59 @@ components:
       x-enum-descriptions:
         - Assessment Workflow
         - Infrastructure Workflow
+    ProcessIntancesDTO:
+      type: array
+      item:
+        $ref: '#/components/schemas/ProcessIntanceDTO'
+    ProcessIntanceDTO:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        workflow:
+          type: string
+        status:
+          $ref: '#/components/schemas/ProcessInstanceStatusDTO'
+        started:
+          type: string
+          format: date-time
+        duration:
+          type: string
+        category?:
+          $ref: '#/components/schemas/WorkflowCategoryDTO'
+        description?:
+          type: string
+        nextWorkflowSuggestions?:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/WorkflowSuggestionDTO'
+    WorkflowSuggestionDTO:
+      type: object
+      properties:
+        suggestion:
+          type: string
+        workflow:
+          type: string
+    ProcessInstanceStatusDTO:
+      type: string
+      description: Status of the workflow run
+      enum:
+        - Running
+        - Error
+        - Completed
+        - Aborted
+        - Suspended
+      x-enum-varnames:
+        - RUNNING
+        - ERROR
+        - COMPLETED
+        - ABORTED
+        - SUSPENDED
+      x-enum-descriptions:
+        - Running
+        - Error
+        - Completed
+        - Aborted
+        - Suspended
