# plugins/orchestrator-common/src/openapi_types.ts
@@ -1,8 +1,17 @@
 import { components } from '../api/models/schema';
 
+export {
+  ProcessInstanceStatusDTO,
+  WorkflowCategoryDTO,
+} from '../api/models/schema';
+
 export type WorkflowOverviewListResultDTO =
   components['schemas']['WorkflowOverviewListResultDTO'];
 export type WorkflowOverviewDTO = components['schemas']['WorkflowOverviewDTO'];
 export type WorkflowDTO = components['schemas']['WorkflowDTO'];
 export type WorkflowListResultDTO =
   components['schemas']['WorkflowListResultDTO'];
+export type ProcessIntanceDTO = components['schemas']['ProcessIntanceDTO'];
+export type ProcessIntancesDTO = components['schemas']['ProcessIntancesDTO'];
+export type ProcessInstanceStatusDTO2 =
+  components['schemas']['ProcessInstanceStatusDTO'];
